packages/tree-sitter-cdl/test/corpus/cdl.txt
================================================================================
Minimal CDL v3 document
================================================================================

(cedarlogic
  (version 3)
  (generator "CedarLogic test"))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (list
      (symbol)
      (symbol))
    (list
      (symbol)
      (string))))

================================================================================
Gate with parameters
================================================================================

(gate "AA_AND2"
  (uuid "b21c")
  (at 12 -4)
  (angle 90)
  (lparam "INPUT_BITS" "2"))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (string)
    (list
      (symbol)
      (string))
    (list
      (symbol)
      (symbol)
      (symbol))
    (list
      (symbol)
      (symbol))
    (list
      (symbol)
      (string)
      (string))))

================================================================================
Wire with segments
================================================================================

(wire
  (ids "77e0")
  (seg "0" h
    (pts -5 0 3 0)
    (connect "3f9a" "OUT_0")
    (cross 3 "1")))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (list
      (symbol)
      (string))
    (list
      (symbol)
      (string)
      (symbol)
      (list
        (symbol)
        (symbol)
        (symbol)
        (symbol)
        (symbol))
      (list
        (symbol)
        (string)
        (string))
      (list
        (symbol)
        (symbol)
        (string)))))

================================================================================
String escapes
================================================================================

(generator "hello \"world\" and \\backslash")

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (string
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

================================================================================
Empty list
================================================================================

(empty)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)))

================================================================================
Negative numbers as symbols
================================================================================

(at -8 -3.5)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (symbol)))
